# freyground

./: '  .dockerignore  .editorconfig  .gitignore  .gitmodules  .textlintrc  Cargo.toml  Dockerfile  Makefile  README.md  WORKSPACE.bazel  cd.yml  ci.yml  gulpfile.js  gulpfile.ts  hosts  jest.config.js  nx.json  package-lock.json  package.json  requirements.yml  spellcheck.yml
.cargo/: config
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  main.yml
backend/: Cargo.toml  Rocket.toml
backend/src/: main.rs
cargo/: crates.bzl
cargo/remote/: BUILD.ahash-0.7.6.bazel  BUILD.backtrace-0.3.66.bazel  BUILD.bytecheck-0.6.9.bazel  BUILD.bytecheck_derive-0.6.9.bazel  BUILD.bytes-1.3.0.bazel  BUILD.cc-1.0.77.bazel  BUILD.corosensei-0.1.3.bazel  BUILD.cranelift-bforest-0.86.1.bazel  BUILD.cranelift-codegen-0.86.1.bazel  BUILD.cranelift-codegen-meta-0.86.1.bazel  BUILD.cranelift-codegen-shared-0.86.1.bazel  BUILD.cranelift-entity-0.86.1.bazel  BUILD.cranelift-frontend-0.86.1.bazel  BUILD.cranelift-isle-0.86.1.bazel  BUILD.crossbeam-channel-0.5.6.bazel  BUILD.crossbeam-deque-0.8.2.bazel  BUILD.crossbeam-epoch-0.9.13.bazel  BUILD.crossbeam-utils-0.8.14.bazel  BUILD.darling-0.14.2.bazel  BUILD.darling_core-0.14.2.bazel  BUILD.darling_macro-0.14.2.bazel  BUILD.either-1.8.0.bazel  BUILD.enum-iterator-0.7.0.bazel  BUILD.enum-iterator-derive-0.7.0.bazel  BUILD.enumset-1.0.12.bazel  BUILD.enumset_derive-0.6.1.bazel  BUILD.fallible-iterator-0.2.0.bazel  BUILD.fxhash-0.2.1.bazel  BUILD.getrandom-0.2.8.bazel  BUILD.gimli-0.26.2.bazel  BUILD.indexmap-1.9.2.bazel  BUILD.leb128-0.2.5.bazel  BUILD.mach-0.3.2.bazel  BUILD.memmap2-0.5.8.bazel  BUILD.memoffset-0.7.1.bazel  BUILD.more-asserts-0.2.2.bazel  BUILD.num_cpus-1.14.0.bazel  BUILD.proc-macro-error-1.0.4.bazel  BUILD.proc-macro-error-attr-1.0.4.bazel  BUILD.ptr_meta-0.1.4.bazel  (+38 more)
config/: .spellcheck.yml  wordlist.txt
containers/: revtunnelproxy.Containerfile
docs/: TOC.md  architecture.md  architeture.md  index.md
docs/general/: architecture.md  architeture.md
features/: blackboard.feature  rtInit.feature  smi.feature  supervisor.feature
features/steps/: supervisor.ts
frontend/: log.out  package-lock.json  package.json
frontend/public/: index.html
group_vars/: all
model/: README.md
model/.cargo/: config.toml
model/src/: lib.rs  service.rs
projects/docs/: index.md  package.json
projects/fg-cad/: package.json  shelf_wedge.scad  toothbrush_holder.scad
projects/fg-model/: Cargo.toml
projects/fg-runtime/: Cargo.toml  package.json
projects/fg-smi/: Cargo.toml  (+2 more)
projects/model/: BUILD.bazel  Cargo.toml
projects/supervisor/: BUILD.bazel  Cargo.toml
public/: index.html
scripts/: doc-check.js  docbuild.js  gridfinity-build.js
tests/: header.test.ts  rtInit.js  runtime.steps.js  smi.steps.js  tests.md
(+67 files in other folders)
