[package]
name = "supervisor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[package.metadata.raze]
workspace_path = "//cargo"
package_aliases_dir = "."
targets = ["x86_64-unknown-linux-gnu"]
genmode = "Remote"
